add index.html and css files

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 
     <body>
         <div> 
-            <img> src="https://media.pitchfork.com/photos/649dbfb832ef0bc7a4f1ac4f/master/pass/Drake-Scorpion.jpg">
-        </div>
+            <img> src=https://images.inc.com/uploaded_files/image/1920x1080/getty_459214425_259091.jpg
             <nav>
                 <h1>Madelines Website</h1>
                 <ul>
