add index.html and css files

--- a/index.html
+++ b/index.html
@@ -1,38 +1,43 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-<title>Madelines Website</title>
+<title>Mads Website</title>
     </head>
+        <title>Mads Website</title>
+        <link rel="stylesheet" href="style.css">
+
 
     <body>
-        <div> 
-            <img> src=https://images.inc.com/uploaded_files/image/1920x1080/getty_459214425_259091.jpg
+        <div id="all-contents"> 
+            <div class="sidebar">
+                <img class="sidebar-img"> src=https://images.inc.com/uploaded_files/image/1920x1080/getty_459214425_259091.jpg
+            </div>
             <nav>
                 <h1>Madelines Website</h1>
-                <ul>
-                    <li>
+                <ul id="nav-ul">
+                    <li class="nav-li">
                         <a href="index.html"> Home </a>
                     </li>
-                    <li>
-                        <a href="portfolio.html"> Portfolio</a>
+                    <li class="nav-li>
+                        <a href="portfolio.html"> Portfolio </a>
                     </li>
                 </ul>
             </nav> 
 
             <main>
 
-                <div>
+                <div class="content">
                     <h2>Madeline Griffith</h2>
                     <p>Student at Mandeville High</p>
                     
-                    <div>
+                    <div id="intrests">
                         <h3>Intrests</h3>
-                        <UL>
+                        <ul>
                             <li>Video Games</li>
                             <li>Swimming</li>
                             <li>Hanging out with friends</li>
 
-                        </UL>
+                        </ul>
                     </div>
                 </div>
 
