add index.html and css files

--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
                     <li class="nav-li">
                         <a href="index.html"> Home </a>
                     </li>
-                    <li class="nav-li>
+                    <li class="nav-li">
                         <a href="portfolio.html"> Portfolio </a>
                     </li>
                 </ul>
             </nav> 
 
             <main>
-                <div class="sidebar">
-                    <img class="sidebar-img" src="https://images.inc.com/uploaded_files/image/1920x1080/getty_459214425_259091.jpg">
-                </div>
-                <div class="content">
+            
+                    <div class="sidebar">
+                        <img class="sidebar-img" src="https://images.inc.com/uploaded_files/image/1920x1080/getty_459214425_259091.jpg">
+                    </div> 
+                    <div class="content">
                     <h2>Madeline Griffith</h2>
                     <p>Student at Mandeville High</p>
                     
