add bouncing box

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,12 +37,11 @@
             <li>
               <a href="projects/circularity/"
                 >Circularity : A motion poem using random number generation and
-                velocity applied to circle shapes...</a
-              >
+                velocity applied to circle shapes...</a>
             </li>
           </ul>
-        </div>
       </main>
     </div>
+  </div>
   </body>
 </html>
