--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -15,7 +15,7 @@
         display: block;
         position: absolute;
         top: 100px;
-        left: 10px; /* <--- Change me! */
+        left: 0px; /* <--- Change me! */
       }
       .board {
         height: 100vh;
@@ -39,7 +39,7 @@
         var box = jQuery(".box"); // reference to the HTML .box element
         var board = jQuery(".board"); // reference to the HTML .board element
         var boardWidth = board.width(); // the maximum X-Coordinate of the screen
-
+        var boardHeight = jQuery(window).height();
         // Every 50 milliseconds, call the update Function (see below)
         setInterval(update, 50);
 
@@ -47,8 +47,9 @@
         box.on("click", handleBoxClick);
 
         // moves the Box to a new position on the screen along the X-Axis
-        function moveBoxTo(newPositionX) {
+        function moveBoxTo(newPositionX, newPositionY) {
           box.css("left", newPositionX);
+          box.css("top", newPositionY);
         }
 
         // changes the text displayed on the Box
@@ -64,30 +65,60 @@
         var positionX = 0;
         var points = 0;
         var speed = 10;
-        /* 
-			This Function will be called 20 times/second. Each time it is called,
-			it should move the Box to a new location. If the box drifts off the screen
-			turn it around! 
-			*/
+        var positionY = 0;
+        var speedY = 5;
+        /*
+      This Function will be called 20 times/second. Each time it is called,
+      it should move the Box to a new location. If the box drifts off the screen
+      turn it around!
+      */
 
         function update() {
           /* Your Code to Increase positionX by 10 HERE */
           positionX = positionX + speed;
-          moveBoxTo(positionX);
+          positionY = positionY + speedY;
+          console.log("update")
+          moveBoxTo(positionX, positionY);
+
+
+          if (positionX > boardWidth) {
+            speed = speed * -1;
+          }
+          if (positionX < 0) {
+            speed = speed * -1;
+          }
+          if (positionY > boardHeight) {
+            speedY = speedY * -1;
+          }
+          if (positionY < 0) {
+            speedY = speedY * -1;
+          }
         }
 
-        /* 
-			This Function will be called each time the box is clicked. Each time it is called,
-			it should increase the points total, increase the speed, and move the box to
-			the left side of the screen.
-			*/
+        /*
+      This Function will be called each time the box is clicked. Each time it is called,
+      it should increase the points total, increase the speed, and move the box to
+      the left side of the screen.
+      */
         function handleBoxClick() {
           positionX = 0;
+          positionY = 0;
           points = points + 1;
           changeBoxText(points);
-          speed = speed + 3
+          speed = speed + 3;
+
+          if (speed > 0) {
+            speed = speed + 3;
+          } else if (speed < 0) {
+            speed = speed - 3;
+          }
+          if (speedY < 0) {
+            speedY = speedY + 4;
+          } else if (speedY > 0) {
+            speedY = speedY + 4;
+          }
         }
-      })();
+      });
     </script>
   </body>
 </html>
