--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Bouncing Box</title>
+    <title>Bouncing Box?</title>
     <script src="jquery.min.js"></script>
     <style>
       .box {
-        width: 70px;
-        height: 70px;
-        background-color: rgb(0, 45, 128);
+        width: 80px;
+        height: 80px;
+        background-color: rgb(43, 113, 245);
         font-size: 300%;
         text-align: center;
         user-select: none;
@@ -42,9 +42,16 @@
         var boardHeight = jQuery(window).height();
         // Every 50 milliseconds, call the update Function (see below)
         var interval = setInterval(update, 50);
-        
-        
+        var randNum = Math.random() * 100;
+        function endGame() {
+          clearInterval(interval);
+        }
 
+        function getRandomColor(colorStr) {
+          var colorStr = "rgb(50, 25, 250)";
+          box.css("background-color", colorStr);
+          var randomNumberBetween0and10 = Math.random() * 10;
+        }
         // Every time the box is clicked, call the handleBoxClick Function (see below)
         box.on("click", handleBoxClick);
 
@@ -52,7 +59,6 @@
         function moveBoxTo(newPositionX, newPositionY) {
           box.css("left", newPositionX);
           box.css("top", newPositionY);
-          var randNum = Math.random() * 100
         }
 
         // changes the text displayed on the Box
@@ -80,9 +86,8 @@
           /* Your Code to Increase positionX by 10 HERE */
           positionX = positionX + speed;
           positionY = positionY + speedY;
-          console.log("update")
+          console.log("update");
           moveBoxTo(positionX, positionY);
-
 
           if (positionX > boardWidth) {
             speed = speed * -1;
@@ -121,7 +126,7 @@
             speedY = speedY + 4;
           }
         }
-      });
+      })();
     </script>
   </body>
 </html>
